--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,11 @@
 server:
   HttpUser: root
   HttpPassword: root@123
-  LineNumber: 43
+  ServerModifyLineNumber: 43
   ConfigFilePath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/config.json
 #  ConfigFilePath: /usr/local/x-ui/bin/config.json
   ShellPath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/change-port.sh
 #  ShellPath: /root/sh/change-port.sh
   DefaultPort: 57001
+  ClashServer: http://localhost:9090
+  ClashSecret: secret@123
