server getport & 增加cron组件

--- a/config.yaml
+++ b/config.yaml
@@ -2,10 +2,11 @@ server:
   HttpUser: root
   HttpPassword: root@123
   ServerModifyLineNumber: 43
-  ConfigFilePath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/config.json
-#  ConfigFilePath: /usr/local/x-ui/bin/config.json
-  ShellPath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/change-port.sh
-#  ShellPath: /root/sh/change-port.sh
+#  ConfigFilePath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/config.json
+  ConfigFilePath: /usr/local/x-ui/bin/config.json
+#  ChangePortShellPath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/change-port.sh
+  ShellPath: /root/sh/change-port.sh
   DefaultPort: 57001
   ClashServer: http://localhost:9090
   ClashSecret: secret@123
+  GetPortShellPath: /root/sh/get-port.sh
