--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,11 @@ server:
 #  ChangePortShellPath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/change-port.sh
   ChangePortShellPath: /root/sh/change-port.sh
   DefaultPort: 42001
+  HttpPort: 37001
+  GetPortShellPath: /root/sh/get-port.sh
+client:
   ClashServer: http://localhost:9090
   ClashSecret: secret@123
-  GetPortShellPath: /root/sh/get-port.sh
+  ConfitFilePath: /Users/ld/.config/clash/config.yaml
+  ServerIP: serverip
+
