--- a/config.yaml
+++ b/config.yaml
@@ -2,12 +2,12 @@ server:
   HttpUser: root
   HttpPassword: root@123
   ServerModifyLineNumber: 43
-#  ConfigFilePath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/config.json
-  ConfigFilePath: /usr/local/x-ui/bin/config.json
-#  ChangePortShellPath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/change-port-mac.sh
+  #  ServerConfigFilePath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/server/config.json
+  ServerConfigFilePath: /usr/local/x-ui/bin/config.json
+  #  ChangePortShellPath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/server/change-port-mac.sh
   ChangePortShellPath: /root/proxy-autoport/resource/server/change-port.sh
-  DefaultPort: 42001
-  HttpPort: 37001
+  ProxyDefaultPort: 42001
+  ServerHttpPort: 37001
   GetPortShellPath: /root/proxy-autoport/resource/server/get-port.sh
 client:
   ClashServer: http://localhost:9090
