--- a/config.yaml
+++ b/config.yaml
@@ -5,14 +5,14 @@ server:
   #  ServerConfigFilePath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/server/config.json
   ServerConfigFilePath: /usr/local/x-ui/bin/config.json
   #  ChangePortShellPath: /Users/ld/my-file/workspace/go_own/proxy-autoport/resource/server/change-port-mac.sh
-  ChangePortShellPath: /root/proxy-autoport/resource/server/change-port.sh
+  ChangePortShellPath: /root/proxy-autoport/resource/server/change-port-mac.sh
   ProxyDefaultPort: 42001
   ServerHttpPort: 37001
   GetPortShellPath: /root/proxy-autoport/resource/server/get-port.sh
 client:
   ClashServer: http://localhost:9090
   ClashSecret: secret@123
-  ConfitFilePath: /Users/ld/.config/clash/config.yaml
-  ServerIP: serverip
+  ClientConfitFilePath: /Users/ld/Desktop
+  ServerIP: serverIP
   TestUrl: http://www.gstatic.com/generate_204&timeout=10000
 
